cargo-features = ["profile-rustflags"]

[workspace]
members = [
  "keyball-common",
  "keyball61/keyball61-nrf52840",
  "keyball61/keyball61-rp2040",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["nazo6"]
description = "Rktk keyball implemention"
license = "MIT"
edition = "2021"
repository = "https://github.com/nazo6/keyball-rs"

[workspace.dependencies]
keyball-common = { path = "keyball-common" }

rktk = { path = "../rktk/lib/rktk" }
rktk-drivers-common = { path = "../rktk/lib/rktk-drivers-common" }
rktk-drivers-nrf = { path = "../rktk/lib/rktk-drivers-nrf" }
rktk-drivers-rp = { path = "../rktk/lib/rktk-drivers-rp" }

embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "task-arena-size-65536",
  # "nightly",
] }
embassy-time = { version = "0.4.0" }
embassy-sync = { version = "0.6.0" }
embassy-embedded-hal = { version = "0.3.0" }

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = { version = "0.7.3" }

ssd1306 = { version = "0.9.0" }

once_cell = { version = "1.20.2", default-features = false, features = [
  "atomic-polyfill",
] }
