cargo-features = ["per-package-target"]

[package]
name = "keyball61-nrf52840"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
forced-target = "thumbv7em-none-eabihf"

[package.metadata.rktk-cli]
mcu = "Nrf52840"

[dependencies]
keyball-common = { workspace = true }

rktk = { workspace = true }
rktk-drivers-nrf = { workspace = true }
rktk-drivers-common = { workspace = true }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-embedded-hal = { workspace = true }

embassy-nrf = { version = "0.3.0", features = [
  "gpiote",
  "time-driver-rtc1",
  "nrf52840",
  "nfc-pins-as-gpio",
  "unstable-pac",
] }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice", features = [
  "ble-peripheral",
  "ble-central",
  "critical-section-impl",
  "s140",
  "nrf52840",
] }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }

ssd1306 = { workspace = true }

once_cell = { workspace = true }

[features]
usb = ["rktk-drivers-nrf/softdevice"]
ble = ["rktk-drivers-nrf/softdevice-ble"]
default = ["ble", "usb"]
