cargo-features = ["per-package-target"]

[package]
name = "keyball61-rp2040"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
forced-target = "thumbv6m-none-eabi"

[package.metadata.rktk-cli]
mcu = "Rp2040"

[dependencies]
keyball-common = { workspace = true }

rktk = { workspace = true }
rktk-drivers-rp = { workspace = true }
rktk-drivers-common = { workspace = true }

embassy-executor = { workspace = true }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
embassy-embedded-hal = { workspace = true }

embassy-rp = { version = "0.4.0", features = [
  "time-driver",
  "critical-section-impl",
  "rp2040",
] }

cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
portable-atomic = { version = "1.6.0", features = [
  "unsafe-assume-single-core",
] }

ssd1306 = { workspace = true }

defmt = { version = "0.3.10", optional = true }

[features]
default = ["defmt"]

defmt = [
  "dep:defmt",
  "rktk/defmt",
  "rktk-drivers-common/defmtusb",
  "rktk-drivers-common/defmt-timestamp",
  "rktk-drivers-rp/defmt",
]
